# EmDash

./: .gitignore  CMakeLists.txt  PublicKey for Version Control.rtf  emDashFileDirectory.rtf  emDashRoadmap.rtf
ai_backend/app/: main.py
ai_backend/app/models/: ai_response.py  telemetry_payload.py
ai_backend/app/routes/: telemetry.py
ai_backend/app/services/: model_loader.py  prediction_engine.py
ai_backend/app/utils/: logger.py  preprocessor.py
ai_backend/models/: metadata.json
ai_backend/tests/: conftest.py  test_model_loader.py  test_prediction_engine.py  test_routes.py
embedded/: CMakeLists.txt
embedded/config/: FreeRTOSConfig.h
embedded/freertos/: FreeRTOS.h  queue.h  task.h
embedded/protocols/: dis_encoder.cpp  dis_encoder.hpp  flatbuffer_serializer.cpp
embedded/qemu_config/: README.md  qemu_start.sh
embedded/rtos/tasks/: ai_task.cpp  ai_task.hpp  scheduler.cpp  scheduler.hpp  task.hpp  telemetry_task.cpp  telemetry_task.hpp
embedded/src/: main.cpp
embedded/tests/: test_scheduler.cpp  test_serial_driver.cpp  test_telemetry_packet.cpp
gui/: CMakeLists.txt
scripts/: test_pipeline.py
scripts/data/: convert_flatbuffers.py  export_telemetry.py  seed_db.py
